--- a/js/devrig/vcs-proto-rig.html
+++ b/js/devrig/vcs-proto-rig.html
@@ -2,16 +2,39 @@
   <head>
     <title>Daily VCS proto</title>
     <script src="../build/daily-vcs-browser.js"></script>
+    <style>
+
+body {
+  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+  font-size: 13px;
+  background-color: #eee;
+  color: black;
+  margin: 0;
+  padding: 0;
+}
+#canvasContainer {
+  background-color: #888;
+}
+#printout {
+  margin-top: 1em;
+}
+
+    </style>
   </head>
 
   <body>
+    <div id="canvasContainer">
+      <canvas id="renderCanvas" width="640" height="360" />
+    </div>
     <div id="printout"></div>
   </body>
 
 <script>
 
+const canvas = document.getElementById("renderCanvas");
+
 console.log("--- calling DailyVCS.init ---");
-DailyVCS.init();
+DailyVCS.init(canvas);
 
 </script>
 </html>
