--- a/js/devrig/vcs-proto-rig.html
+++ b/js/devrig/vcs-proto-rig.html
@@ -6,35 +6,224 @@
 
 body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-  font-size: 13px;
-  background-color: #eee;
+  font-size: 15px;
+  background-color: #272627;
   color: black;
   margin: 0;
   padding: 0;
 }
-#canvasContainer {
-  background-color: #888;
+
+#mainContainer {
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
 }
-#printout {
-  margin-top: 1em;
+
+#canvasContainer {
+  flex: none;
+  background-color: black;
+  overflow: hidden;
+  width: 640px;
+  height: 360px;
+}
+#deco {
+  flex: none;
+  margin-top: 30px;
+  height: 99px;
+  background-image: url('example-assets/atari_vcs_woodgrain_texture.png');
+  background-size: contain;
+}
+#controls {
+  flex: 1 0 auto;
+  background-color: #474749;
+  color: #eee;
+  padding: 1rem;
+}
+#controls button {
+  padding: 1px 6px;
+}
+#controls button.selected {
+  background-color: coral;
+}
+#demoassets {
+  display: none;
 }
 
     </style>
   </head>
 
   <body>
-    <div id="canvasContainer">
-      <canvas id="renderCanvas" width="640" height="360" />
+    <div id="mainContainer">
+      <div id="canvasContainer">
+        <canvas id="renderCanvas" width="640" height="360" />
+      </div>
+      <div id="deco"></div>
+      <div id="controls">
+        <div class="vc">
+          <span>Participants: </span>
+          <button data-index=0 class="selected">1</button>
+          <button data-index=1>2</button>
+          <button data-index=2>3</button>
+          <button data-index=3>4</button>
+          <button data-index=4>5</button>
+          <button data-index=5>6</button>
+          <button data-index=6>7</button>
+          <button data-index=7>8</button>
+          <button data-index=8>9</button>
+        </div>
+      </div>  
     </div>
-    <div id="printout"></div>
+
+    <div id="demoassets">
+      <img id="demoperson_missfury" src="example-assets/demoperson_missfury.png" />
+      <img id="demoperson_moongirl" src="example-assets/demoperson_moongirl.png" />
+      <img id="demoperson_yellowkid" src="example-assets/demoperson_yellowkid.png" />
+    </div>
   </body>
 
 <script>
 
-const canvas = document.getElementById("renderCanvas");
+// --- UI state ---
 
-console.log("--- calling DailyVCS.init ---");
-DailyVCS.init(canvas);
+const MAX_PARTICIPANTS = 16;
+
+const g_activeParticipants = [];
+for (let i = 0; i < MAX_PARTICIPANTS; i++) {
+  g_activeParticipants[i] = false;
+}
+g_activeParticipants[0] = true;
+
+
+// --- UI actions ---
+
+for (const btn of document.querySelectorAll("#controls .vc button")) {
+  const idx = btn.dataset.index;
+  const active = g_activeParticipants[idx];
+  btn.setAttribute('class', active ? 'selected' : '');
+
+  btn.addEventListener('click', participantToggled);
+}
+
+function participantToggled(ev) {
+  const btn = ev.target;
+  const idx = btn.dataset.index;
+
+  const active = g_activeParticipants[idx] ? false : true;
+  btn.setAttribute('class', active ? 'selected' : '');
+
+  g_activeParticipants[idx] = active;
+
+  sendActiveParticipants();
+}
+
+
+// --- setup rendering ---
+
+const g_canvas = document.getElementById("renderCanvas");
+
+let g_vcsCommandApi;
+
+
+async function setupLiveVideo() {
+  // this video element will be used as a drawable source when rendering to canvas
+  let liveVideoEl;
+
+  try {
+    const mediaStream = await navigator.mediaDevices.getUserMedia(
+      { video: {width: 1280, height: 720},
+        audio: false
+      }
+    );
+    console.log("got mediaStream: ", mediaStream);
+
+    liveVideoEl = document.createElement('video');
+    liveVideoEl.setAttribute('muted', true);
+    liveVideoEl.setAttribute('autoPlay', true);
+    liveVideoEl.srcObject = mediaStream;
+
+    // place element in DOM so it gets updates
+    liveVideoEl.setAttribute('style', "display: none;");
+    g_canvas.parentElement.appendChild(liveVideoEl);
+  } catch (e) {
+    console.error("** getUserMedia failed: ", e);
+    alert("Live video not available, getUserMedia failed:\n\n"+e);
+  }
+  return liveVideoEl;
+}
+
+async function loadTestImages() {
+  const exampleAssets = [
+    { name: 'test_square', file: 'test_square_320px.png' },
+  ];
+
+  const promises = [];
+  for (const ea of exampleAssets) {
+    promises.push(new Promise((resolve, reject) => {
+      const img = new Image();
+      
+      img.onload = () => {
+        resolve({name: ea.name, image: img});
+      };
+      img.onerror = () => {
+        const msg = `Image load failed, asset ${ea.file}`;
+        console.error(msg);
+        reject(new Error(msg));
+      };
+      img.src = `example-assets/${ea.file}`;
+    }));
+  }
+
+  const results = await Promise.all(promises);
+  const imagesByName = {};
+  for (const item of results) {
+    imagesByName[item.name] = item.image;
+  }
+  return imagesByName;
+}
+
+async function start() {
+  const liveVideoEl = await setupLiveVideo();
+  const testImages = await loadTestImages();
+
+  const demoPeople = [
+    document.getElementById('demoperson_missfury'),
+    document.getElementById('demoperson_moongirl'),
+    document.getElementById('demoperson_yellowkid'),
+
+    document.getElementById('demoperson_missfury'),
+    document.getElementById('demoperson_moongirl'),
+    document.getElementById('demoperson_yellowkid'),
+
+    document.getElementById('demoperson_missfury'),
+    document.getElementById('demoperson_moongirl'),
+    document.getElementById('demoperson_yellowkid'),
+  ];
+
+  const sources = {
+    videoElements: [liveVideoEl].concat(demoPeople),
+    images: testImages,
+  };
+
+  console.log("--- calling DailyVCS.init ---");
+
+  g_vcsCommandApi = DailyVCS.init(g_canvas, sources);
+
+  // send initial data
+  sendActiveParticipants();
+}
+
+start();
+
+
+// --- commands sent to composition ---
+
+function sendActiveParticipants() {
+  if (!g_vcsCommandApi) return;
+
+  g_vcsCommandApi.setActiveParticipants(g_activeParticipants);
+}
+
 
 </script>
 </html>
