--- a/js/devrig/vcs-proto-rig.html
+++ b/js/devrig/vcs-proto-rig.html
@@ -39,6 +39,8 @@ body {
   background-color: #474749;
   color: #eee;
   padding: 1rem;
+  padding-top: 0;
+  font-size: 14px;
 }
 #controls button {
   padding: 1px 6px;
@@ -48,6 +50,33 @@ body {
 }
 #demoassets {
   display: none;
+}
+#controls .compInfo {
+  position: relative;
+  top: -40px;
+  text-shadow: rgba(0, 0, 0, 0.3) 1px 0px;
+  font-size: 1.05rem;
+}
+#controls .compInfo .name {
+  font-weight: 600;
+  margin-bottom: 0.25em;
+  display: inline-block;
+}
+#controls .compInfo .description {
+  font-weight: 300;
+  font-size: 0.9em;
+  opacity: 0.95;
+  display: inline-block;
+  margin-left: 2em;
+}
+#controls h3 {
+  margin: 0;
+  margin-bottom: 0.5rem;
+  font-size: 0.95rem;
+  border-bottom: 1px solid rgba(255, 255, 255, 0.25);
+}
+#controls .compInterface {
+  margin-top: 1.5em;
 }
 
     </style>
@@ -60,7 +89,12 @@ body {
       </div>
       <div id="deco"></div>
       <div id="controls">
+        <div class="compInfo">
+          <div class="name"></div>
+          <div class="description"></div>
+        </div>
         <div class="vc">
+          <h3>Video call</h3>
           <span>Participants: </span>
           <button data-index=0 class="selected">1</button>
           <button data-index=1>2</button>
@@ -71,8 +105,19 @@ body {
           <button data-index=6>7</button>
           <button data-index=7>8</button>
           <button data-index=8>9</button>
+          <button data-index=9>10</button>
+          <button data-index=10>11</button>
+          <button data-index=11>12</button>
+          <button data-index=12>13</button>
+          <button data-index=13>14</button>
+          <button data-index=14>15</button>
+          <button data-index=15>16</button>
         </div>
-      </div>  
+        <div class="compInterface">
+          <h3>Composition interface</h3>
+          <div class="params"></div>
+        </div>
+      </div>
     </div>
 
     <div id="demoassets">
@@ -198,6 +243,16 @@ async function start() {
     document.getElementById('demoperson_missfury'),
     document.getElementById('demoperson_moongirl'),
     document.getElementById('demoperson_yellowkid'),
+
+    document.getElementById('demoperson_missfury'),
+    document.getElementById('demoperson_moongirl'),
+    document.getElementById('demoperson_yellowkid'),
+
+    document.getElementById('demoperson_missfury'),
+    document.getElementById('demoperson_moongirl'),
+    document.getElementById('demoperson_yellowkid'),
+
+    document.getElementById('demoperson_missfury'),
   ];
 
   const sources = {
@@ -209,11 +264,51 @@ async function start() {
 
   g_vcsCommandApi = DailyVCS.init(g_canvas, sources);
 
+  // print composition info
+  const compInterface = g_vcsCommandApi.getCompositionInterface();
+  const {displayMeta} = compInterface;
+
+  document.querySelector("#controls .compInfo .name").innerHTML = displayMeta.name;
+  document.querySelector("#controls .compInfo .description").innerHTML = displayMeta.description;
+
+  // create composition params
+  createParamsUI(compInterface, document.querySelector("#controls .compInterface .params"));
+
+
   // send initial data
   sendActiveParticipants();
 }
 
 start();
+
+
+function createParamsUI(compInterface, box) {
+  for (const paramDesc of compInterface.params) {
+    const {id, type, defaultValue} = paramDesc;
+    let el;
+    switch (type) {
+      case 'boolean':
+        el = document.createElement('input');
+        el.setAttribute('type', 'checkbox');
+        el.setAttribute('data-param-id', id);
+        if (defaultValue) el.setAttribute('checked');
+        break;
+
+      default:
+        console.warn("** unsupported param type from composition: '%s'", type);
+        break;
+    }
+
+    if (el) {
+      const div = document.createElement('div');
+      const label = document.createElement('label');
+      label.innerText = id || '<No id provided>';
+      
+
+      box.appendChild(div);
+    }
+  }
+}
 
 
 // --- commands sent to composition ---
