--- a/js/devrig/vcs-proto-rig.html
+++ b/js/devrig/vcs-proto-rig.html
@@ -65,7 +65,6 @@ body {
   background-color: #474749;
   color: #eee;
   padding: 1rem;
-  padding-top: 0;
   font-size: 14px;
   overflow-y: scroll;
 }
@@ -92,18 +91,20 @@ body {
 #demoassets {
   display: none;
 }
-#controls .compInfo {
+#compInfo {
   position: relative;
-  top: -40px;
-  text-shadow: rgba(0, 0, 0, 0.3) 1px 0px;
+  padding: 1rem;
+  margin-top: 5px;
+  color: rgba(255, 255, 240, 0.7);
+  text-shadow: rgba(0, 0, 0, 0.4) 1px 1px;
   font-size: 1.05rem;
 }
-#controls .compInfo .name {
+#compInfo .name {
   font-weight: 600;
   margin-bottom: 0.25em;
   display: inline-block;
 }
-#controls .compInfo .description {
+#compInfo .description {
   font-weight: 300;
   font-size: 0.9em;
   opacity: 0.95;
@@ -116,14 +117,33 @@ body {
   font-size: 0.95rem;
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 }
+#controls h4 {
+  margin-right: 1rem;
+  margin-bottom: 0;
+  font-weight: normal;
+}
 #controls .compInterface {
   margin-top: 1.5em;
+}
+#controls .compInterface > div.modes {
+  margin-top: 1rem;
+}
+#controls .compInterface .modes > label {
+  display: inline-block;
+  margin-right: 0.5em;
+}
+#controls .compInterface .modes > select {
+  min-width: 20em;
+}
+#controls .compInterface > div.params {
+  margin-left: 1rem;
 }
 #controls .compInterface .params > div {
   margin-top: 0.35em;
 }
 #controls .compInterface .params > div > input[type=text] {
   display: inline-block;
+  width: 30em;
   margin-left: 1em;
   background-color: rgba(90, 90, 90, 0.5);
   color: white;
@@ -138,12 +158,13 @@ body {
         <div id="canvasContainer">
           <canvas id="renderCanvas" width="640" height="360" />
         </div>
-        <div id="deco"></div>
-        <div id="controls">
-          <div class="compInfo">
+        <div id="deco">
+          <div id="compInfo">
             <div class="name"></div>
             <div class="description"></div>
           </div>
+        </div>
+        <div id="controls">
           <div class="vc">
             <h3>Video call</h3>
             <span>Participants: </span>
@@ -166,6 +187,13 @@ body {
           </div>
           <div class="compInterface">
             <h3>Composition interface</h3>
+            <div class="modes">
+              <label for="modeSelector">Mode:</label>
+              <select id="modeSelector">
+                <option>[No modes for this composition]</option>
+              </select>
+            </div>
+            <h4>Params:</h4>
             <div class="params"></div>
           </div>
         </div>  
@@ -290,6 +318,34 @@ function createParamsUI(compInterface, box) {
   }
 }
 
+function createModesUI(compInterface, sel) {
+  let child;
+  while ((child = sel.firstChild)) {
+    sel.removeChild(child);
+  }
+
+  let firstId;
+  for (const modeId of compInterface.modes) {
+    const opt = document.createElement('option');
+    opt.setAttribute('value', modeId);
+    opt.innerText = modeId;
+    sel.appendChild(opt);
+
+    if ( !firstId) firstId = modeId;
+  }
+  if ( !firstId) {
+    // could add a placeholder
+  }
+
+  sel.addEventListener('change', function(ev) {
+      const sel = ev.target;
+      const opt = sel.options[sel.selectedIndex];
+      const modeId = opt.value;
+      sendModeChange(modeId);
+    }, false);
+
+}
+
 
 // --- setup rendering ---
 
@@ -396,10 +452,13 @@ async function start() {
   const compInterface = g_vcsCommandApi.getCompositionInterface();
   const {displayMeta} = compInterface;
 
-  document.querySelector("#controls .compInfo .name").innerHTML = displayMeta.name;
-  document.querySelector("#controls .compInfo .description").innerHTML = displayMeta.description;
+  console.log("composition metadata: ", displayMeta);
 
-  // create composition params
+  document.querySelector("#compInfo .name").innerHTML = displayMeta.name;
+  document.querySelector("#compInfo .description").innerHTML = displayMeta.description;
+
+  // create composition UI
+  createModesUI(compInterface, document.querySelector("#controls .compInterface .modes > select"));
   createParamsUI(compInterface, document.querySelector("#controls .compInterface .params"));
 
   // send initial data
@@ -412,7 +471,7 @@ start();
 // --- callback received from composition ---
 
 function compUpdated(sceneDesc) {
-  console.log("scene desc JSON: ", JSON.stringify(sceneDesc));
+  //console.log("scene desc JSON: ", JSON.stringify(sceneDesc));
 
   const printoutEl = document.getElementById("sceneDescPrintOut");
 
@@ -446,6 +505,12 @@ function sendParamChange(paramId, value) {
   if (!g_vcsCommandApi) return;
 
   g_vcsCommandApi.setParamValue(paramId, value);
+}
+
+function sendModeChange(modeId) {
+  if (!g_vcsCommandApi) return;
+
+  g_vcsCommandApi.selectMode(modeId);
 }
 
 
