--- a/js/devrig/vcs-rig.html
+++ b/js/devrig/vcs-rig.html
@@ -1,7 +1,6 @@
 <html>
   <head>
     <title>Daily VCS dev rig</title>
-    <script src="../build/daily-vcs-browser.js"></script>
     <style>
 
 body {
@@ -56,7 +55,7 @@ body {
 }
 #deco {
   flex: none;
-  margin-top: 30px;
+  margin-top: 1px;
   height: 62px;
   background-image: url('example-assets/atari_vcs_woodgrain_texture.png');
 }
@@ -118,22 +117,13 @@ body {
   border-bottom: 1px solid rgba(255, 255, 255, 0.25);
 }
 #controls h4 {
+  margin-top: 0.5rem;
   margin-right: 1rem;
   margin-bottom: 0;
   font-weight: normal;
 }
 #controls .compInterface {
   margin-top: 1.5em;
-}
-#controls .compInterface > div.modes {
-  margin-top: 1rem;
-}
-#controls .compInterface .modes > label {
-  display: inline-block;
-  margin-right: 0.5em;
-}
-#controls .compInterface .modes > select {
-  min-width: 20em;
 }
 #controls .compInterface > div.params {
   margin-left: 1rem;
@@ -147,6 +137,10 @@ body {
   margin-left: 1em;
   background-color: rgba(90, 90, 90, 0.5);
   color: white;
+}
+#controls .compInterface .params select {
+  min-width: 20em;
+  margin-left: 1em;
 }
 #controls .videoInputButtons {
   display: inline-block;
@@ -196,12 +190,6 @@ body {
           </div>
           <div class="compInterface">
             <h3>Composition interface</h3>
-            <div class="modes">
-              <label for="modeSelector">Mode:</label>
-              <select id="modeSelector">
-                <option>[No modes for this composition]</option>
-              </select>
-            </div>
             <h4>Params:</h4>
             <div class="params"></div>
           </div>
@@ -218,6 +206,7 @@ body {
       <img id="demoperson_missfury" src="example-assets/demoperson_missfury.png" />
       <img id="demoperson_moongirl" src="example-assets/demoperson_moongirl.png" />
       <img id="demoperson_yellowkid" src="example-assets/demoperson_yellowkid.png" />
+      <img id="screenshare_standin" src="example-assets/screenshare_standin_1600x900.png" />
     </div>
   </body>
 
@@ -279,6 +268,19 @@ function screenshareToggled(ev) {
   setActiveVideoInput(idx, g_activeVideoInputSlots[idx].active, s);
 
   sendActiveVideoInputSlots();
+
+  // for any screenshares, replace the default source with a screenshare input
+  let sources = {...g_defaultSources};
+  sources.videos = g_defaultSources.videos.slice();
+
+  const ssImageEl = document.getElementById('screenshare_standin');
+  for (let i = 0; i < MAX_VIDEO_INPUTS; i++) {
+    if (g_activeVideoInputSlots[i].type !== 'screenshare') continue;
+
+    sources.videos.splice(i, 1, ssImageEl);
+  }
+
+  sendUpdateImageSources(sources);
   
   createVideoInputsUI();
 }
@@ -303,6 +305,19 @@ function paramTextEdited(ev) {
     return;
   }
   const newValue = field.value || '';
+
+  sendParamChange(paramId, newValue);
+}
+
+function paramEnumSelected(ev) {
+  const sel = ev.target;
+  const paramId = sel.dataset.paramId;
+  if (!paramId || paramId.length < 1) {
+    alert("Missing paramId");
+    return;
+  }
+  const opt = sel.options[sel.selectedIndex];
+  const newValue = opt.value || '';
 
   sendParamChange(paramId, newValue);
 }
@@ -333,6 +348,17 @@ function createParamsUI(compInterface, box) {
 
         el.addEventListener('change', paramTextEdited);
         break;
+
+      case 'enum':
+        el = document.createElement('select');
+        createEnumUI(paramDesc.values || [], id, el);
+
+        if (defaultValue) {
+          // TODO: select default item
+        }
+        
+        el.addEventListener('change', paramEnumSelected);
+        break;
     }
 
     if (el) {
@@ -354,32 +380,24 @@ function createParamsUI(compInterface, box) {
   }
 }
 
-function createModesUI(compInterface, sel) {
+function createEnumUI(enumValues, paramId, sel) {
   let child;
   while ((child = sel.firstChild)) {
     sel.removeChild(child);
   }
 
   let firstId;
-  for (const modeId of compInterface.modes) {
+  for (const val of enumValues) {
     const opt = document.createElement('option');
-    opt.setAttribute('value', modeId);
-    opt.innerText = modeId;
+    opt.setAttribute('value', val);
+    opt.innerText = val;
     sel.appendChild(opt);
 
-    if ( !firstId) firstId = modeId;
+    if ( !firstId) firstId = val;
   }
   if ( !firstId) {
-    // could add a placeholder
+    // TODO: add a placeholder item
   }
-
-  sel.addEventListener('change', function(ev) {
-      const sel = ev.target;
-      const opt = sel.options[sel.selectedIndex];
-      const modeId = opt.value;
-      sendModeChange(modeId);
-    }, false);
-
 }
 
 function createVideoInputsUI() {
@@ -506,42 +524,46 @@ async function loadTestImages() {
   return imagesByName;
 }
 
+const demoPeople = [
+  document.getElementById('demoperson_missfury'),
+  document.getElementById('demoperson_moongirl'),
+  document.getElementById('demoperson_yellowkid'),
+
+  document.getElementById('demoperson_missfury'),
+  document.getElementById('demoperson_moongirl'),
+  document.getElementById('demoperson_yellowkid'),
+
+  document.getElementById('demoperson_missfury'),
+  document.getElementById('demoperson_moongirl'),
+  document.getElementById('demoperson_yellowkid'),
+
+  document.getElementById('demoperson_missfury'),
+  document.getElementById('demoperson_moongirl'),
+  document.getElementById('demoperson_yellowkid'),
+
+  document.getElementById('demoperson_missfury'),
+  document.getElementById('demoperson_moongirl'),
+  document.getElementById('demoperson_yellowkid'),
+
+  document.getElementById('demoperson_missfury'),
+];
+
+let g_defaultSources = {}; // initialized in start
+
 async function start() {
   const liveVideoEl = await setupLiveVideo();
   const testImages = await loadTestImages();
 
-  const demoPeople = [
-    document.getElementById('demoperson_missfury'),
-    document.getElementById('demoperson_moongirl'),
-    document.getElementById('demoperson_yellowkid'),
-
-    document.getElementById('demoperson_missfury'),
-    document.getElementById('demoperson_moongirl'),
-    document.getElementById('demoperson_yellowkid'),
-
-    document.getElementById('demoperson_missfury'),
-    document.getElementById('demoperson_moongirl'),
-    document.getElementById('demoperson_yellowkid'),
-
-    document.getElementById('demoperson_missfury'),
-    document.getElementById('demoperson_moongirl'),
-    document.getElementById('demoperson_yellowkid'),
-
-    document.getElementById('demoperson_missfury'),
-    document.getElementById('demoperson_moongirl'),
-    document.getElementById('demoperson_yellowkid'),
-
-    document.getElementById('demoperson_missfury'),
-  ];
-
-  const sources = {
+  g_defaultSources = {
     videos: [liveVideoEl].concat(demoPeople),
     images: testImages,
   };
 
-  console.log("--- calling DailyVCS.init ---");
+  console.log("--- awaiting DailyVCS.initAsync ---");
 
-  g_vcsCommandApi = DailyVCS.init(g_canvas, sources, compUpdated);
+  g_vcsCommandApi = await DailyVCS.initAsync(g_canvas, g_defaultSources, compUpdated);
+
+  console.log("### init done.")
 
   // print composition info
   const compInterface = g_vcsCommandApi.getCompositionInterface();
@@ -553,7 +575,6 @@ async function start() {
   document.querySelector("#compInfo .description").innerHTML = displayMeta.description;
 
   // create composition UI
-  createModesUI(compInterface, document.querySelector("#controls .compInterface .modes > select"));
   createParamsUI(compInterface, document.querySelector("#controls .compInterface .params"));
 
   // send initial data
@@ -566,6 +587,8 @@ start();
 // --- callback received from composition ---
 
 function compUpdated(sceneDesc) {
+  if ( !sceneDesc) return;
+
   //console.log("scene desc JSON: ", JSON.stringify(sceneDesc));
 
   const printoutEl = document.getElementById("sceneDescPrintOut");
@@ -622,6 +645,11 @@ function sendModeChange(modeId) {
   g_vcsCommandApi.selectMode(modeId);
 }
 
+function sendUpdateImageSources(srcs) {
+  if (!g_vcsCommandApi) return;
+
+  g_vcsCommandApi.updateImageSources(srcs);
+}
 
 </script>
 </html>
