Rename layout size hook, other tweaks

--- a/js/devrig/vcs-rig.html
+++ b/js/devrig/vcs-rig.html
@@ -581,7 +581,9 @@ async function start() {
   sendActiveVideoInputSlots();
 }
 
-start();
+window.addEventListener('load', function(ev) {
+  start();
+});
 
 
 // --- callback received from composition ---
